# betmaker

./: .env_example  README.md  docker-compose.yaml  pyproject.toml
bet-maker/: Dockerfile  main.py  requirements.txt
bet-maker/migrations/: env.py
bet-maker/migrations/versions/: d2df8bf37e3b_add_models.py
bet-maker/src/: config.py  ioc.py
bet-maker/src/adapters/: db.py  request.py  uow.py
bet-maker/src/adapters/storage/: models.py  repo.py
bet-maker/src/application/: enum.py  interface.py
bet-maker/src/application/dto/: bet.py  event.py
bet-maker/src/application/services/: bet.py  event.py
bet-maker/src/entrypoints/: bet.py
line-provider/: Dockerfile  config.py  main.py  requirements.txt
line-provider/migrations/: env.py
line-provider/migrations/versions/: 55af5d0b39ca_update.py  841a2bd32dfc_add_models.py  c324b728c2c4_update.py
line-provider/src/: ioc.py
line-provider/src/adapters/: db.py  request.py  uow.py
line-provider/src/adapters/storage/: models.py  repo.py
line-provider/src/application/: interface.py
line-provider/src/application/dto/: __init__.py
line-provider/src/application/services/: event.py
line-provider/src/entrypoints/: event.py
